iree examples for mm tiling

--- a/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
@@ -132,6 +132,7 @@ iree_cc_library(
     "BufferizationAnalysis.h"
     "Transforms.h"
   SRCS
+    "YufanAnalysis.cpp"
     "BufferizationAnalysis.cpp"
     "BufferizeCopyOnlyDispatchesPass.cpp"
     "CleanupBufferAllocViewPass.cpp"
